3.6/anypoint-platform-for-apis/api-auto-discovery.adoc
== API Auto-Discovery
:keywords: apikit, endpoint, auto-discovery, gateway, api, cloud

When creating or modifying an API project in Anypoint Studio, you can set up your API's inbound endpoint to be automatically discovered and registered in your Anypoint Platform for APIs organization.

The automatic discovery and registration of your API on the Anypoint Platform occurs when you deploy the applications to an API Gateway that is paired with your Anypoint Platform organization. While you can also register your APIs using the Anypoint Platform web application or its API, the API auto-discovery feature gives you an additional option for registering API endpoints quickly and efficiently. It's particularly useful when you're regularly deploying new versions of the same API, saving you from the effort of having to type the same information into the Web application every time and minimizing the risk of human error.

[NOTE]
Note that if you are applying auto-discovery code to an API that is not yet registered in the Anypoint Platform, you must be an Organization Administrator in order to see the registered API. If you are not one yourself, ask the Organization Administrator to give you API Version Owner permissions or add you to a custom role that includes those permissions for the API version that you created using auto-discovery.

*link:#APIAuto-Discovery-Example[Skip to the code]*

== Configuration

To enable auto-discovery of an application's endpoints you must:

. Create a global element to declare the details of the API version to be registered in the Anypoint Platform for APIs.
. Insert a reference to the global element in your inbound endpoint.

=== Creating the Global Element

A Global Element contains the needed information for registering your API to the Anypoint Platform, Global Elements must then be referenced by one or more endpoints.

As of version 1.3 of the API Gateway, if you need your endpoint to be tracked, then you must explicitly indicate the required information directly in the GE's attributes.

[NOTE]
====
If you're using an API Gateway version older than 1.3 and you're using the APIkit Studio extension, you can also simply reference the API's RAML definition file and let the auto-discovery feature retrieve details about your API from there. This can also be done in versions newer than 1.3, but when doing so you will not have that endpoint tracked, so it's not recommended if you want to manage the endpoint.

*With Gateway versions older than 1.3:*

If your application is an *APIkit project*, you can use the http://apikitconfig[apikit:config] global element to implement auto-discovery.

[source,xml]
----
<apikit:config name="myAPI" raml="myAPI.raml"/>
----

[cols="2",options="header"]
|====
|Global Element |Description
|*http://apikitconfig[apikit:config]* |A global element which retrieves essential information from the API's RAML about the service version necessary for the automatic registration of the service version and/or its endpoints in the Anypoint Platform for APIs.
|====

[cols=",,",options="header",]
|===
|Attribute |Required |Description
|*name* |Yes |The friendly API name.
|*raml* |Yes |Location of the API's RAML definition file.
|===

*Full Example*
[source,xml]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:api-platform-gw="http://www.mulesoft.org/schema/mule/api-platform-gw"
      xmlns:http="http://www.mulesoft.org/schema/mule/http"
      xmlns:apikit="http://www.mulesoft.org/schema/mule/apikit"
      xsi:schemaLocation="
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
       http://www.mulesoft.org/schema/mule/apikit http://www.mulesoft.org/schema/mule/apikit/current/mule-apikit.xsd
       http://www.mulesoft.org/schema/mule/api-platform-gw http://www.mulesoft.org/schema/mule/api-platform-gw/current/mule-api-platform-gw.xsd">

    <apikit:config name="myAPI" raml="myAPI.raml"/>

    <flow name="flow_apikit">
        <http:inbound-endpoint host="localhost" port="${port}" path="apikit">
            <api-platform-gw:register-as apikit-ref="myAPI"/>
        </http:inbound-endpoint>
        <set-payload value="Test" />
    </flow>
</mule>
----

In either case you can aso explicitly reference the API attributes as explained below.

====

Use the following structure for your auto-discovery code.
[source,xml]
----
<api-platform-gw:api id="myAPI" apiName="My New API" version="1.0.0" environment="Development">
        <api-platform-gw:description>
          Description of the API goes here.
        </api-platform-gw:description>
        <api-platform-gw:tag>tag1</api-platform-gw:tag>
        <api-platform-gw:tag>tag2</api-platform-gw:tag>
</api-platform-gw:api>
----

[cols=",",options="header",]
|===
|Global Element |Description
|*api-platform-gw:api* |A global element which declares essential information about the service version necessary for the automatic registration of the service version and/or its endpoints in the Anypoint Platform for APIs.
|===

[cols=",,",options="header",]
|======
|Attribute |Required |Description
|*id* |Yes |The id of the global element, which you reference in the api-ref attribute in your endpoint.
|*apiName* |Yes |The friendly API name.
|*version* |Yes |The version number.
|======

[cols=",,",options="header",]
|===
|Nested Element |Required |Description
|***api-platform-gw**:description* |No |A description of the API.
|***api-platform-gw**:tag* |No |Tags are searchable metadata in the Anypoint Platform for APIs web application and API.
|===

=== Referencing Your Global Element in Your Endpoint

You must now reference that global element in the inbound endpoint that you wish to register in the Anypoint Platform for APIs. Do this by adding a nested element in the inbound endpoint that includes an `api-ref` or `apikit-ref` that references the global element by name or id.

[source,xml]
----
<http:inbound-endpoint host="some_host" port="some_port" path="some_path">
     <api-platform-gw:register-as api-ref="myAPI"/>
</http:inbound-endpoint>
----

[cols=",",options="header",]
|====
|Nested Element |Description
|***api-platform-gw**:register-as* |Triggers the agent to "discover" this application and perform the auto-registration.
|====

[cols=",",options="header",]
|=========
|Attribute |Description
|*api-ref* |References the `api-platform-gw:api` global element that includes the information that the agent needs to register the API and/or endpoint.
|*apikit-ref* |References the `apikit:config` global element that includes the information that the agent needs to register the API and/or endpoint.
|=========

== Full Example

[source,xml]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:api-platform-gw="http://www.mulesoft.org/schema/mule/api-platform-gw"
      xmlns:http="http://www.mulesoft.org/schema/mule/http"
      xsi:schemaLocation="
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
       http://www.mulesoft.org/schema/mule/api-platform-gw http://www.mulesoft.org/schema/mule/api-platform-gw/current/mule-api-platform-gw.xsd">

    <api-platform-gw:api id="myAPI" apiName="myAPI" version="1.0.0">
        <api-platform-gw:description>This is a test API</api-platform-gw:description>
        <api-platform-gw:tag>tag1</api-platform-gw:tag>
        <api-platform-gw:tag>tag2</api-platform-gw:tag>
    </api-platform-gw:api>

    <flow name="flow_api">
        <http:inbound-endpoint host="localhost" port="${port}" path="api">
            <api-platform-gw:register-as api-ref="myAPI" />
        </http:inbound-endpoint>
        <set-payload value="Test" />
    </flow>
</mule>
----

== Auto-Discovery Behavior

When you deploy applications to an API Gateway paired with the Anypoint Platform for APIs, the agent will perform the following steps to auto-discover and register your service version and/or endpoints in the Anypoint Platform for APIs.

First, the agent will only initiate auto-discovery if prompted to do so by the existence of an `api-platform-gw:register-as` nested element in the inbound endpoint of the application:

image:/documentation/download/attachments/122752564/autodiscoveryyesorno.png?version=1&modificationDate=1418935386132[image]

Once the auto-discovery process is initiated, the agent evaluates the information provided in the  `api-platform-gw:api`  or `apikit-config` global element and executes a series of checks and steps. The following diagram illustrates the process for a project with an endpoint containing an `api-platform-gw:api` nested element:

image:/documentation/download/attachments/122752564/nonRAMLAutoD.png?version=1&modificationDate=1418935386147[image]

Once it is registered in the Anypoint Platform for APIs via auto-discovery, your API version and its endpoint functions the same as any other API version or endpoint registered via other means. You can edit, update, or delete them via the Anypoint Platform for APIs web application or its API. If the API Gateway instance running the API goes offline or you stop the underlying application, the API and endpoints will remain in the Anypoint Platform for APIs, but the endpoints will be untracked by the agent.

== Cloud API Gateway Behavior

If you deploy an API or proxy with auto-registration to the Anypoint Platform for APIs via a cloud API gateway, CloudHub automatically replaces `0.0.0.0`:$\{http.port} in your endpoint with <YourUniqueDomain>.cloudhub.io and sends this endpoint URL to the Anypoint Platform for APIs to be displayed and tracked by the agent.

If your endpoint runs over HTTP, use the variable `http.port` in its address, if your endpoint runs over HTTPS, use the variable `https.port` instead.

== Load Balancer Behavior

[IMPORTANT]
This consideration is only relevant if you're using an API Gateway version older than 1.3. If you're using API Gateway version 1.3 or newer, you don't need to worry about configuring your load balancer's endpoint at all.

For Gateway versions older than 1.3, if you deploy an API or proxy to the Anypoint Platform for APIs via an on-premises API Gateway that employs an HTTP load balancer, you need to configure your load balancer endpoint in your API Gateway's wrapper.conf file and register it through autodiscovery. See link:/documentation/display/current/Setting+Your+API+URL[Setting Your API URL] for more details about configuring load balancers for your endpoints.

== Best Practices

* Keep in mind that API auto-discovery works for the registration of _new_ APIs, API versions, and/or endpoints. If the API already exists, the agent does not compare the name, description, tags, or any other information contained in the global element for updates.
* Once you have registered new APIs or versions using this method, visit the Anypoint Platform for APIs and add the necessary API Version Owner permissions so that users who need to access the API Version Details page for this API version can get there. Note that only Organization Administrators or other API Version Owners can give users API Version Owner permissions to an API version.
* Set up your endpoints so that their host is `0.0.0.0` instead of the default localhost.

== See Also

* Once you've added your auto-discovery code to your APIkit project or API proxy application, link:/documentation/display/current/Deploying+Your+API+or+Proxy[deploy it to an API Gateway].
